[package]
name = "miner-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.30.0"
byteorder = "1.4.3"
hex = "0.4.3"
jsonrpsee = { version = "0.18.2", features = ["full"] }
num-bigint = "0.4.3"
reqwest = { version = "0.11.18", features = ['json'] }
stratum = "0.1.0"
tokio = { version = "1.28.2", features = ["full"] }
async-std="1.8.0"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
async-channel = "1.5.1"
sha256 = "1.1.4"
binascii = "0.1.4"
primitive-types = "0.12.1"
rand = "0.8.5"
clap = { version = "4.3.11", features = ["derive"]}
