[package]
name = "miner-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
sha256 = "1.1.4"
primitive-types = "0.12.1"
rand = "0.8.5"
clap = { version = "4.3.11", features = ["derive"]}
