[package]
name = "miner-project"
version = "0.1.0"
edition = "2021"

[dependencies]
# help us convert string hex to bytes and back
hex = "0.4.3"
# async runtime. help us write async code
tokio = { version = "1.28.2", features = ["full"] }
# next 2 packages help us serialize and deserialize json
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
# sha256 hash function
sha256 = "1.1.4"
# this package help us to working with big numbers like U256
primitive-types = "0.12.1"
# package for random generation, we will use it to generate nonce
rand = "0.8.5"
# help us to parse command line arguments
clap = { version = "4.3.11", features = ["derive"]}
